--- a/src/components/Graph/Progressbar/Progressbar.module.scss
+++ b/src/components/Graph/Progressbar/Progressbar.module.scss
@@ -3,8 +3,8 @@
   display: flex;
   flex: 1;
   align-items: flex-end;
-  padding: 0 1em;
-  max-width: 40px;
+  padding: 0 2px;
+  max-width: 20px;
   span {
     flex: 1;
     position: relative;
@@ -48,24 +48,24 @@
 
 /* Smartphones */
 
-@media only screen and (max-width: 414px) {
-  body {
-    background-color: red;
+@media only screen and (min-width: 414px) {
+  .progressbar {
+    padding: 0 5px;
+    max-width: 30px;
   }
 }
 
-/* iPads (portrait and landscape) ----------- */
+/** Large Smartphones */
+
+@media only screen and (min-width: 415px) and (max-width: 749px) {
+  .progressbar {
+    padding: 0 8px;
+  }
+}
 
 @media only screen and (min-device-width: 750px) and(max-device-width: 1024px) {
-  body {
-    // background-color: blue;
-  }
-}
-
-/* Desktops and laptops ----------- */
-
-@media only screen and (min-width: 1224px) {
-  body {
-    background-color: green;
+  .progressbar {
+    padding: 0 10px;
+    max-width: 40px;
   }
 }
