--- a/src/components/Graph/Bargraph/Bargraph.module.scss
+++ b/src/components/Graph/Bargraph/Bargraph.module.scss
@@ -2,14 +2,8 @@
   display: flex;
   flex-direction: row-reverse;
   height: 200px;
-  width: 100%;
-  max-width: 900px;
   margin: auto;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.1) 2%,
-    transparent 2%
-  );
+  background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.1) 2%, transparent 2%);
   background-size: 100% 50px;
   background-position: left top;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
