--- a/src/containers/App/App.module.scss
+++ b/src/containers/App/App.module.scss
@@ -1,7 +1,7 @@
 .app {
   background-color: #ffffff;
   margin: 20px;
-  padding: 20px 50px;
+  padding: 20px 55px 25px 20px;
   .graphTitle {
     margin-bottom: 29px;
     font-size: 16px;
@@ -14,7 +14,6 @@
 @media only screen and (min-width: 414px) {
   .app {
     margin: 50px 40px;
-    padding: 20px 55px;
     .graphTitle {
       font-size: 18px;
     }
