--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -46,3 +46,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/*  Import Font */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+body {
+	font-family: "Roboto",sans-serif;
+	background-color:#F2F2F2;
+}
