Implement spinner loader for the graph

--- a/src/components/Graph/Bargraph/Bargraph.module.scss
+++ b/src/components/Graph/Bargraph/Bargraph.module.scss
@@ -7,4 +7,5 @@
   background-size: 100% 50px;
   background-position: left top;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  position: relative;
 }
