Swich to display flex + reverse the sessions from right to left + set a progressbar maxwidth

--- a/src/components/Graph/Bargraph/Bargraph.module.scss
+++ b/src/components/Graph/Bargraph/Bargraph.module.scss
@@ -1,6 +1,7 @@
 .bargraph {
-  display: table;
-  table-layout: fixed;
+  display: flex;
+  flex-direction: row-reverse;
+  height: 200px;
   width: 100%;
   max-width: 900px;
   margin: auto;
