--- a/src/components/Graph/Bargraph/Bargraph.module.scss
+++ b/src/components/Graph/Bargraph/Bargraph.module.scss
@@ -5,7 +5,6 @@
   width: 100%;
   max-width: 900px;
   margin: auto;
-
   background-image: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0.1) 2%,
@@ -13,4 +12,5 @@
   );
   background-size: 100% 50px;
   background-position: left top;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
