--- a/src/components/Graph/Progressbar/Progressbar.module.scss
+++ b/src/components/Graph/Progressbar/Progressbar.module.scss
@@ -26,12 +26,13 @@
         text-align: center;
       }
       &:before {
+        content: "";
         border: solid;
         border-color: rgba(22, 52, 80, 1) transparent;
         border-width: 6px 6px 0 6px;
         top: -8px;
-        left: 13px;
-        content: "";
+        left: 50%;
+        transform: translateX(-50%);
         position: absolute;
         z-index: 99;
       }
@@ -41,8 +42,7 @@
 
 // animation draw
 @keyframes draw {
-    0% {
-      height: 0;
-    }
+  0% {
+    height: 0;
   }
-  
+}
