--- a/src/components/Graph/Bargraph/Bargraph.module.scss
+++ b/src/components/Graph/Bargraph/Bargraph.module.scss
@@ -1,11 +1,30 @@
-.bargraph {
-  display: flex;
-  flex-direction: row-reverse;
-  height: 200px;
-  margin: auto;
-  background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.1) 2%, transparent 2%);
-  background-size: 100% 50px;
-  background-position: left top;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  position: relative;
+.container {
+  background-color: #ffffff;
+  margin: 20px;
+  padding: 20px 55px 25px 20px;
+  .bargraph {
+    display: flex;
+    flex-direction: row-reverse;
+    height: 200px;
+    margin: auto;
+    background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.1) 2%, transparent 2%);
+    background-size: 100% 50px;
+    background-position: left top;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    position: relative;
+  }
+  .graphTitle {
+    margin-bottom: 29px;
+    font-size: 16px;
+    font-weight: 300;
+  }
+}
+
+@media only screen and (min-width: 414px) {
+  .container {
+    margin: 20px 40px;
+    .graphTitle {
+      font-size: 18px;
+    }
+  }
 }
